# datrope

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/api/: mod.rs
src/api/client/: http_client.rs  mod.rs
src/api/client/endpoints/: gateway.rs
src/api/objects/: application.rs  application_command.rs  application_role_connection_metadata.rs  emoji.rs  guild_scheduled_event.rs  guild_template.rs  interactions.rs  mod.rs  permissions.rs  sticker.rs  user.rs  voice.rs  webhook.rs
src/gateway/: mod.rs
src/gateway/events/: activity.rs  mod.rs  presence.rs  voice.rs
src/gateway/events/guild/: mod.rs
src/resources/: application.rs  application_command.rs  application_role_connection_metadata.rs  audit_log.rs  auto_moderation.rs  channel.rs  emoji.rs  guild.rs  guild_scheduled_event.rs  guild_template.rs  invite.rs  mod.rs  permissions.rs  poll.rs  stage_instance.rs  team.rs  user.rs  voice.rs
