[package]
name = "datrope"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Brandon Frohs <brandon@19.codes>"]
publish = false

[dependencies]
enumset = "1.1.3"
futures-util = { version = "0.3.30", optional = true }
reqwest = { version = "0.12.4", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.117", optional = true }
serde_repr = { version = "0.1.19", optional = true }
thiserror = { version = "1.0.61", optional = true }
time = "0.3.36"
tokio = { "version" = "1.37.0", "features" = [
    "io-std",
    "macros",
    "rt-multi-thread",
], optional = true }
tokio-tungstenite = { "version" = "0.21.0", "features" = [
    "rustls-tls-webpki-roots",
], optional = true }
url = "2.5.0"

[dev-dependencies]
cargo-all-features = "1.10.0"

[package.metadata.cargo-all-features]
skip_feature_sets = [
    [
        "private",
        "serde",
    ],
    [
        "private",
        "clone",
    ],
    [
        "private",
        "debug",
    ],
    [
        "api",
        "api_objects",
    ],
    [
        "gateway",
        "gateway_objects",
    ],
    [
        "all_objects",
        "api_objects",
    ],
    [
        "all_objects",
        "gateway_objects",
    ],
    [
        "gateway",
        "api",
    ],
]
# Skip "private" feature for now, need to build out the api and gateway for it to make sense
denylist = ["private"]

[features]
default = ["api", "clone", "debug", "gateway", "serde"]

api = ["api_objects", "serde", "dep:reqwest", "dep:thiserror"]
api_objects = []
gateway = [
    "gateway_objects",
    "serde",
    "api",
    "dep:futures-util",
    "dep:tokio",
    "dep:tokio-tungstenite",
]
gateway_objects = ["api_objects"]
all_objects = ["api_objects", "gateway_objects"]

undocumented-fields = []

clone = []
debug = []
serde = [
    "dep:serde",
    "dep:serde_json",
    "dep:serde_repr",

    "enumset/serde",
    "time/serde",
    "time/formatting",
    "time/parsing",
    "url/serde",
]

# Special feature to check for unused objects.
# Intentionally not documented in `README.md` as it's not intended for public use.
private = ["api", "gateway"]
